--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
     margin: 0 24px;
 }
 
+.pull-right {
+    float: right;
+}
+
+.pull-left {
+    float: right;
+}
+
 .view-controls-container {
     margin: 10px 0 10px 0;
 }
@@ -15,6 +23,13 @@
 .view-controls {
     display: inline-block;
     margin: 0 0 0 10px;
+}
+
+.view-controls.view-categories {
+    float: left;
+}
+
+.view-controls.view-controls-sort {
     float: right;
 }
 
