--- a/src/App.css
+++ b/src/App.css
@@ -93,22 +93,29 @@
     margin: 0 0 20px 0;
 }
 
-.post-actions {
+.post-actions, .comment-actions {
     padding: 0 0 0 5px;
 }
 
-.post-actions .post-action {
+.post-actions .post-action, .comment-actions .comment-action {
     font-size: 0.65em;
     color: #848d95;
     padding: 0 3px 2px;
     cursor: pointer;
 }
 
-.post-actions .post-action:hover {
+.comment-actions .comment-action {
+    font-size: 0.75em;
+    color: #848d95;
+    padding: 0 3px 2px;
+    cursor: pointer;
+}
+
+.post-actions .post-action:hover, .comment-actions .comment-action:hover {
     color: #3b4045;
 }
 
-.post-actions .post-action a {
+.post-actions .post-action a, .comment-actions .comment-action a {
     color: inherit;
     text-decoration: none;
 }
